testsuite/tests/typecheck/should_fail/tcfail021.stderr

tcfail021.hs:8:5: error:
    Pattern bindings (except simple variables) not allowed in instance declaration:
      ((==), (/=)) = (\ x -> \ y -> True, \ x -> \ y -> False)
